--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
            crossorigin=""></script>
 		   
-		   <script src="leaflet.heat.js"></script>
+		   <script src="leaflet-heat.js"></script>
 		   
 		   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
@@ -28,7 +28,7 @@
 
     <body>
 	
-		<h3 style="color:royal blue; font-weight:bold; text-align:center">Chicago Landmarks Heatmap</h3>
+		<h3 style="color: blue; font-weight:bold; text-align:center">Chicago Landmarks Heatmap</h3>
         <div id="map"></div>
 
         <script type="text/javascript">
