--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 		
           
 		  
-		$.getJson("chi_landmarks.geoJson",function(marks){
+		$.getJson("chi_landmarks.geoJson",function(data){
 		
-			var locations = marks.features.map(function(chi_landmarks) {
+			var locations = data.features.map(function(chi_landmarks) {
 				var location = chi_landmarks.geometry.coordinates.reverse();
 				location.push(1);
 				return location;			
