--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
            integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
            crossorigin=""></script>
 		   
-		   <script src="leaflet-heat.js"></script>
+		   <script src="leaflet.heat.js"></script>
 		   
 		   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
@@ -20,7 +20,6 @@
           #map { min-height: 100%; }
         </style>
 
-        <script type="text/javascript" src="chi_landmarks.js"></script>
 		
 		
 
