--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		  
 		  
 
-          var StreetMap = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+          L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 				maxZoom: 19,
 				attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 				}).addTo(map);
