--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		
 		var heat = L.heatLayer(locations, {
 			radius: 80,
-			gradient: (0.3: 'blue', 0.7: 'ffffbf', 1: '#a50f15'}
+			gradient: {0.3: 'blue', 0.7: 'ffffbf', 1: '#a50f15'}
 			});
 		map.addLayer(heat);
 		});
