--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
         crossorigin=""></script>     
 		   
-		   <script src="leaflet.heat.js"></script>
+	 <script src="leaflet.heat.js"></script>
 		   
-		   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
+	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> 
 
          <style type="text/css">
           html, body { margin: 0; padding: 0; height: 100%; }
@@ -55,7 +55,7 @@
 		
 		var heat = L.heatLayer(locations, {
 			radius: 80,
-			gradient: {0.3: 'blue', 0.7: 'ffffbf', 1: '#a50f15'}
+			gradient: {0.3: 'blue', 0.7: 'lime', 1: 'red'}
 			});
 		map.addLayer(heat);
 		});
