--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		
 		var heat = L.heatLayer(locations, {
 			radius: 80,
-			gradient: {0.3: 'blue', 0.7: 'lime', 1: 'red'}
+			gradient: {0.3: 'yellow', 0.7: 'orange', 1: 'red'}
 			});
 		map.addLayer(heat);
 		});
